crates/test-files/fixtures/compile_errors/self_in_standalone_fn.fe
fn pure_fn(self) {
    self.mut_fn()
}

contract Foo {
    fn foo(self) {
        pure_fn(self)
    }
}
